<resources>
    <string name="app_name">Controle de Peso e Pressão</string>
    <string name="peso">Peso</string>
    <string name="exemplo_peso">110Kg</string>
    <string name="exemplo_pressao">120/80</string>
    <string name="pressao">Pressão</string>
    <string name="salvar">Salvar</string>
    <string name="insiraPeso">Insira o seu peso</string>
    <string name="pesoRecente">%1$sKg</string>
    <string name="InfoPesoSalvo">Peso salvo com sucesso</string>
    <string name="pressaoRecente">%1$s/%2$s</string>
    <string name="InfoPressaoSalva">Pressao Salva com sucesso</string>
    <string name="pesoAtual">pesoAtual</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>