<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tituloPeso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/peso"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/pesoTelaPrincipal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/pesoTelaPrincipal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exemplo_peso"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@id/sliderPeso"
        app:layout_constraintEnd_toEndOf="@+id/tituloPeso"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/tituloPeso"
        app:layout_constraintTop_toBottomOf="@id/tituloPeso" />



    <com.google.android.material.slider.Slider
        android:id="@+id/sliderPeso"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:stepSize="0.05"
        android:valueTo="200"
        app:layout_constraintBottom_toTopOf="@id/salvarNovoPeso"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pesoTelaPrincipal"
        app:trackHeight="5dp" />

    <Button
        android:id="@+id/salvarNovoPeso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salvar"
        app:layout_constraintEnd_toEndOf="@+id/sliderPeso"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/sliderPeso"
        app:layout_constraintTop_toBottomOf="@id/sliderPeso"
        app:layout_constraintBottom_toTopOf="@id/guiaCentral"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiaCentral"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>