<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/tituloPressaoTelaPrincipal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pressao"
        android:layout_marginTop="16dp"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

       />

    <TextView
        android:id="@+id/pressaoTelaPrincipal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exemplo_pressao"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tituloPressaoTelaPrincipal" />

    <NumberPicker
        android:id="@+id/pickerPressaoSistolica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/tituloPressaoTelaPrincipal"
        app:layout_constraintTop_toBottomOf="@+id/pressaoTelaPrincipal" />
    <NumberPicker
        android:id="@+id/pickerPressaoDiastolica"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/pickerPressaoSistolica"
        app:layout_constraintTop_toBottomOf="@+id/pressaoTelaPrincipal" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guiaCentral"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <Button
        android:id="@+id/btnSalvarPressao"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text= "@string/salvar"
        android:layout_marginBottom="4dp"
        app:layout_constraintTop_toBottomOf="@id/pickerPressaoDiastolica"
        app:layout_constraintStart_toStartOf="@id/pickerPressaoDiastolica"
        app:layout_constraintEnd_toEndOf="@id/pickerPressaoSistolica"
        app:layout_constraintBottom_toTopOf="@id/guiaCentral"
        />


</androidx.constraintlayout.widget.ConstraintLayout>